crates/caelix-macros/tests/ui/injectable_rejects_non_arc_field.stderr
error: #[injectable] fields must be std::sync::Arc<T>
 --> tests/ui/injectable_rejects_non_arc_field.rs:7:11
  |
7 |     repo: Repo,
  |           ^^^^
