crates/caelix-macros/tests/ui/injectable_rejects_non_arc_field.rs
use caelix_macros::injectable;

struct Repo;

#[injectable]
struct Service {
    repo: Repo,
}

fn main() {}
